--- a/templates/super_hero/_delete_form.html.twig
+++ b/templates/super_hero/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_super_hero_delete', {'id': super_hero.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_super_hero_delete', {'id': super_hero.id}) }}" onsubmit="return confirm('Êtes-vous sûr(e) de vouloir supprimer ce Super Héros ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ super_hero.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Supprimer</button>
 </form>
