--- a/templates/super_hero/edit.html.twig
+++ b/templates/super_hero/edit.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit SuperHero{% endblock %}
+{% block title %}Modifier le Super Héros{% endblock %}
 
 {% block body %}
-    <h1>Edit SuperHero</h1>
-
-    {{ include('super_hero/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_super_hero_index') }}">back to list</a>
-
-    {{ include('super_hero/_delete_form.html.twig') }}
+    <div class="container mt-4">
+        <h1 class="mb-4">Modifier le Super Héros</h1>
+        {{ include('super_hero/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+        <a href="{{ path('app_super_hero_index') }}" class="btn btn-secondary mt-3">Retour à la liste</a>
+        {{ include('super_hero/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
