--- a/templates/super_hero/index.html.twig
+++ b/templates/super_hero/index.html.twig
@@ -42,6 +42,10 @@
                     <td>
                         <a href="{{ path('app_super_hero_show', {'id': super_hero.id}) }}" class="btn btn-info btn-sm">Voir</a>
                         <a href="{{ path('app_super_hero_edit', {'id': super_hero.id}) }}" class="btn btn-warning btn-sm">Modifier</a>
+                        <form method="post" action="{{ path('app_super_hero_delete', {'id': super_hero.id}) }}" style="display: inline;" onsubmit="return confirm('Voulez-vous vraiment supprimer ce pouvoir ?');">
+                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ super_hero.id) }}">
+                                <button class="btn btn-danger btn-sm">Supprimer</button>
+                        </form>   
                     </td>
                 </tr>
             {% endfor %}
